tests/compilation_error/print_void.ll
def voidFunction():
    pass

print voidFunction()
